--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -24,12 +24,17 @@
         "prettier"
     ],
     "rules": {
-        "prettier/prettier": "error",
+        "linebreak-style": 0,
+        "prettier/prettier": ["error", {
+          "endOfLine":"auto",
+          "linebreak-style": "never"
+        }],
         "@typescript-eslint/explicit-module-boundary-types": "off",
         "react/jsx-one-expression-per-line": "off",
         "no-use-before-define":"off",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
+        "object-curly-newline": "off",
         "react/jsx-filename-extension": [
           1,
           {
